--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,23 +1,38 @@
 {
     "save": "يحفظ",
+    "text": "نص",
+    "image": "الصورة",
+    "video": "فيديو",
+    "audio": "صوتي",
+    "paid": "مدفوع",
+    "pending": "قيد الانتظار",
+    "cancelled": "ألغى",
+    "failed": "فشل",
+    "declined": "انخفض",
+    "reports": "التقارير",
     "settings": "إعدادات",
+    "general": "عام",
     "logo": "شعار",
     "favicon": "فافيكون",
+    "payment": "قسط",
     "test mode": "وضع الاختبار",
     "secret key": "المفتاح السري",
-    "Game Settings": "إعدادات اللعبة",
+    "game settings": "إعدادات اللعبة",
     "win sound effect": "اربح تأثير سليم",
     "lose sound effect": "تفقد تأثير الصوت",
     "success": "نجاح",
     "settings updated successfully": "تحديث الإعدادات بنجاح",
+    "admin": "مسؤل",
+    "admins": "مسؤولون",
     "name": "الاسم",
     "email": "البريد الإلكتروني",
     "password": "كلمة المرور",
     "role": "الدور",
+    "created at": "تم إنشاؤها في",
+    "category": "الفئة",
     "categories": "الأقسام",
     "title": "العنوان",
     "content": "المحتوى",
-    "image": "الصورة",
     "temp category": "فئة مؤقتة",
     "number of questions": "عدد الأسئلة",
     "yes": "نعم",
@@ -31,60 +46,86 @@
     "medium": "متوسط",
     "hard": "صعب",
     "unknown": "غير معروف",
+    "coupon": "قسيمة",
+    "coupons": "كوبونات",
     "coupon code": "رمز القسيمة",
-    "max uses per user": "يستخدم Max لكل مستخدم",
-    "max users": "مستخدمي أقصى",
-    "leave empty for unlimited users": "اترك فارغًا للمستخدمين غير المحدودين",
+    "max uses \/ per user": "أقصى استخدام \/ لكل مستخدم",
+    "total max uses": "إجمالي الاستخدامات ماكس",
+    "leave empty for unlimited uses": "اترك فارغًا لاستخدامات غير محدودة",
+    "discount type": "نوع الخصم",
+    "discount value": "قيمة الخصم",
     "expiration date": "تاريخ انتهاء الصلاحية",
     "leave empty for no expiration": "اترك فارغًا لعدم انتهاء الصلاحية",
-    "max uses\/user": "Max يستخدم \/المستخدم",
+    "max uses\/user": "اقصى استخدام \/للمستخدم",
+    "max users": "مستخدمي أقصى",
     "unlimited": "غير محدود",
     "total uses": "الاستخدامات الكلية",
     "expires at": "تنتهي في",
     "active": "نشيط",
-    "created at": "تم إنشاؤها في",
-    "packages": "الباقات",
+    "game": "لعبة",
+    "games": "الألعاب",
+    "user": "المستخدم",
+    "teams": "فرق",
+    "team name": "اسم الفريق",
+    "game created successfully": "تم إنشاء اللعبة بنجاح",
+    "error creating game": "خطأ في إنشاء اللعبة",
+    "game title": "عنوان اللعبة",
+    "order": "طلب",
+    "orders": "طلبات",
+    "id": "المعرف",
+    "total": "المجموع",
     "package": "الباقة",
+    "payment status": "حالة الدفع",
+    "username": "اسم المستخدم",
+    "phone": "الهاتف",
+    "country": "دولة",
+    "birth of date": "ولادة التاريخ",
+    "status updated successfully!": "تم تحديث الحالة بنجاح!",
+    "package title": "عنوان الحزمة",
+    "package price": "سعر الحزمة",
+    "tap id": "tap id",
+    "payment status updated successfully!": "تم تحديث حالة الدفع بنجاح!",
+    "packages": "الباقات",
     "games count": "عدد الألعاب",
     "price": "السعر",
     "kwd": "دينار كويتي",
     "description": "الوصف",
     "games_count": "عدد الألعاب",
-    "page": "page",
-    "pages": "pages",
-    "slug": "slug",
-    "is published": "is published",
-    "created_at": "created_at",
-    "updated_at": "updated_at",
-    "published": "published",
-    "user": "المستخدم",
-    "payment status": "حالة الدفع",
-    "transaction time": "وقت المعاملة",
+    "page": "صفحة",
+    "pages": "الصفحات",
+    "slug": "سبيكة",
+    "is published": "تم نشره",
+    "updated at": "تحديث في",
+    "published": "المنشورة",
+    "qeustion feedback": "استجواب ردود الفعل",
+    "qeustion feedbacks": "تساؤل التعليقات",
+    "provided by": "المقدمة من قبل",
     "feedback": "التغذية الراجعة",
     "provided on": "مقدم في",
-    "general": "عام",
     "difficulty level": "مستوى الصعوبة",
-    "category": "الفئة",
     "difference": "فرق السنوات",
+    "hide question media": "إخفاء وسائط الأسئلة",
+    "hide question media after (seconds)": "إخفاء وسائط الأسئلة بعد (ثواني)",
     "question text": "نص السؤال",
+    "question media type": "نوع وسائط السؤال",
     "question media": "وسائط السؤال",
     "answer text": "نص الإجابة",
     "answer media": "وسائط الإجابة",
-    "id": "المعرف",
-    "import questions": "استيراد الأسئلة",
-    "column mappings": "تعيين الأعمدة",
-    "Questions import has been queued": "تمت إضافة استيراد الأسئلة إلى قائمة الانتظار",
-    "Import job ID: {$jobId}. You will receive an email notification when the import is complete.": "معرف استيراد المهمة: {$jobId}. سوف تتلقى إشعارًا بالبريد الإلكتروني عند اكتمال الاستيراد.",
-    "Failed to queue questions import": "فشل في إضافة استيراد الأسئلة إلى قائمة الانتظار",
-    "An error occurred while trying to queue the import job. Please try again or contact support.": "حدث خطأ أثناء محاولة إضافة استيراد المهمة إلى قائمة الانتظار. يرجى المحاولة مرة أخرى أو الاتصال بالدعم.",
-    "customers": "العملاء",
-    "phone": "الهاتف",
-    "username": "اسم المستخدم",
+    "store": "متجر",
+    "created_at": "أنشأت",
+    "order id": "معرف الطلب",
+    "shipping": "شحن",
+    "status": "حالة",
+    "products": "منتجات",
+    "suggested question": "سؤال مقترح",
+    "suggested questions": "أسئلة مقترحة",
+    "suggested by": "اقترح من قبل",
+    "images": "الصور",
+    "users": "المستخدمين",
     "date of birth": "تاريخ الميلاد",
-    "Gender": "جنس",
-    "Male": "ذكر",
-    "Female": "أنثى",
-    "country": "دولة",
+    "gender": "جنس",
+    "male": "ذكر",
+    "female": "أنثى",
     "kuwait": "الكويت",
     "saudi arabia": "المملكة العربية السعودية",
     "united arab emirates": "الإمارات العربية المتحدة",
@@ -97,16 +138,19 @@
     "game credits": "رصيد الألعاب",
     "credits amount": "كمية الرصيد",
     "user games credit updated": "تم تحديث رصيد ألعاب المستخدم",
-    "Game credits amount": "كمية رصيد الألعاب",
     "transaction id": "معرف المعاملة",
-    "amount": "المبلغ",
     "type": "النوع",
     "deposit": "إيداع",
     "withdraw": "سحب",
-    "KD": "دينار كويتي",
-    "Total Earnings": "إجمالي الأرباح",
-    "users": "المستخدمين",
-    "not authorized": "not authorized",
+    "amount": "المبلغ",
+    "reason": "سبب",
+    "kd": "kd",
+    "no data": "لا توجد بيانات",
+    "total earnings": "إجمالي الأرباح",
+    "top user by purchase": "كبار المستخدمين بالشراء",
+    "total spent": "إجمالي الإنفاق",
+    "number of games played": "لعب عدد الألعاب",
+    "not authorized": "غير مصرح به",
     "updated successfully": "تم التحديث بنجاح",
     "error, try again later": "خطأ، يرجى المحاولة لاحقًا",
     "user created successfully": "تم إنشاء المستخدم بنجاح",
@@ -120,16 +164,48 @@
     "verification code has been resent": "تم استياء رمز التحقق",
     "google login successful": "جوجل تسجيل الدخول الناجح",
     "invalid category id": "معرف الفئة غير صالح",
-    "games": "الألعاب",
+    "validation failed": "فشل التحقق",
+    "invalid or expired coupon": "قسيمة غير صالحة أو منتهية الصلاحية",
+    "valid coupon": "قسيمة صالحة",
     "invalid game id": "معرف اللعبة غير صالح",
-    "invalid package id": "معرف الباقة غير صالح",
+    "user orders": "أوامر المستخدم",
+    "invalid coupon.": "قسيمة غير صالحة.",
+    "failed to create order. please try again.": "فشل في إنشاء ترتيب.من فضلك حاول مرة أخرى.",
     "invalid request id": "معرف الطلب غير صالح",
+    "invalid order id": "معرف الطلب غير صالح",
     "payment already processed": "تمت معالجة الدفع مسبقًا",
     "paid successfully": "تم الدفع بنجاح",
     "payment failed": "فشل الدفع",
+    "invalid package id": "معرف الباقة غير صالح",
     "page not found": "الصفحة لم يتم العثور عليها",
-    "validation failed": "فشل التحقق",
     "feedback submitted successfully": "تم تقديم التغذية الراجعة بنجاح",
+    "categories retrieved successfully": "تم استرداد الفئات بنجاح",
+    "category retrieved successfully": "تم استرداد الفئة بنجاح",
+    "user store orders": "أوامر متجر المستخدم",
+    "unauthorized": "غير مصرح به",
+    "order retrieved successfully": "ترتيب استرداد بنجاح",
+    "order created successfully": "تم إنشاؤه بنجاح",
+    "failed to create order": "فشل إنشاء الطلب",
+    "payment successful": "الدفع ناجح",
+    "products retrieved successfully": "تم استرداد المنتجات بنجاح",
+    "invalid product id": "معرف المنتج غير صالح",
+    "product retrieved successfully": "تم استرداد المنتج بنجاح",
+    "thank you for your suggestion": "شكرا لك على اقتراحك",
+    "suggestion updated successfully": "تم تحديث الاقتراح بنجاح",
+    "not found": "لم يتم العثور عليها",
+    "suggesetion deleted successfully": "تم حذف الاقتراح بنجاح",
+    "category deleted successfully": "تم حذف الفئة بنجاح",
+    "question deleted successfully": "تم حذف السؤال بنجاح",
+    "insufficient balance": "توازن غير كاف",
+    "you must select 4 to 6 categories": "يجب عليك تحديد 4 إلى 6 فئات",
+    "KD": "دينار كويتي",
+    "import questions": "استيراد الأسئلة",
+    "column mappings": "تعيين الأعمدة",
+    "updated_at": "تحديثفي",
+    "customers": "العملاء",
+    "max uses per user": "يستخدم Max لكل مستخدم",
+    "leave empty for unlimited users": "اترك فارغًا للمستخدمين غير المحدودين",
+    "transaction time": "وقت المعاملة",
     "excel file (.xlsx)": "ملف إكسل (xlsx)",
     "questions imported successfully": "تم استيراد الأسئلة بنجاح",
     "is active": "نشط",
@@ -138,17 +214,14 @@
     "invalid transaction id": "معرف المعاملة غير صالح",
     "is_active": "الحالة نشط",
     "upload media": "تحميل الوسائط",
-    "Question Media": "وسائط السؤال",
-    "Answer Media": "وسائط الإجابة",
-    "question media type": "نوع وسائط السؤال",
-    "text": "نص",
-    "video": "فيديو",
-    "audio": "صوتي",
     "answer media type": "نوع وسائط الإجابة",
     "permenant category": "فئة دائمة",
     "is temp": "فئة مؤقتة",
     "parent category": "الفئة الرئيسية",
     "no Parent": "لا يوجد",
-    "User Info": "معلومات المستخدم",
+    "INITIATED": "قيد الانتظار",
+    "CAPTURED": "مدفوع",
+    "DECLINED": "مرفوض",
+    "CANCELLED": "ملغي",
     "delete": "حذف"
 }
