--- a/lang/en.json
+++ b/lang/en.json
@@ -1,23 +1,38 @@
 {
     "save": "Save",
+    "text": "Text",
+    "image": "Image",
+    "video": "Video",
+    "audio": "Audio",
+    "paid": "paid",
+    "pending": "pending",
+    "cancelled": "cancelled",
+    "failed": "failed",
+    "declined": "declined",
+    "reports": "reports",
     "settings": "Settings",
+    "general": "General",
     "logo": "Logo",
     "favicon": "Favicon",
+    "payment": "payment",
     "test mode": "Test Mode",
     "secret key": "Secret Key",
-    "Game Settings": "Game Settings",
+    "game settings": "game settings",
     "win sound effect": "Win Sound Effect",
     "lose sound effect": "Lose Sound Effect",
     "success": "Success",
     "settings updated successfully": "Settings Updated Successfully",
+    "admin": "admin",
+    "admins": "admins",
     "name": "Name",
     "email": "Email",
     "password": "Password",
     "role": "Role",
+    "created at": "Created At",
+    "category": "Category",
     "categories": "Categories",
     "title": "Title",
     "content": "Content",
-    "image": "Image",
     "temp category": "Temp Category",
     "number of questions": "Number Of Questions",
     "yes": "Yes",
@@ -31,20 +46,46 @@
     "medium": "Medium",
     "hard": "Hard",
     "unknown": "Unknown",
+    "coupon": "coupon",
+    "coupons": "coupons",
     "coupon code": "Coupon Code",
-    "max uses per user": "Max Uses Per User",
-    "max users": "Max Users",
-    "leave empty for unlimited users": "Leave Empty For Unlimited Users",
+    "max uses \/ per user": "max uses \/ per user",
+    "total max uses": "total max uses",
+    "leave empty for unlimited uses": "leave empty for unlimited uses",
+    "discount type": "discount type",
+    "discount value": "discount value",
     "expiration date": "Expiration Date",
     "leave empty for no expiration": "Leave Empty For No Expiration",
     "max uses\/user": "Max Uses\/User",
+    "max users": "Max Users",
     "unlimited": "Unlimited",
     "total uses": "Total Uses",
     "expires at": "Expires At",
     "active": "Active",
-    "created at": "Created At",
-    "packages": "Packages",
+    "game": "game",
+    "games": "Games",
+    "user": "User",
+    "teams": "teams",
+    "team name": "team name",
+    "game created successfully": "game created successfully",
+    "error creating game": "error creating game",
+    "game title": "game title",
+    "order": "order",
+    "orders": "orders",
+    "id": "Id",
+    "total": "total",
     "package": "Package",
+    "payment status": "Payment Status",
+    "username": "Username",
+    "phone": "Phone",
+    "country": "Country",
+    "birth of date": "birth of date",
+    "status updated successfully!": "status updated successfully!",
+    "package title": "package title",
+    "package price": "package price",
+    "tap id": "tap id",
+    "payment status updated successfully!": "payment status updated successfully!",
+    "packages": "Packages",
     "games count": "Games Count",
     "price": "Price",
     "kwd": "Kwd",
@@ -54,37 +95,37 @@
     "pages": "Pages",
     "slug": "Slug",
     "is published": "Is Published",
-    "created_at": "Created_At",
-    "updated_at": "Updated_At",
+    "updated at": "updated at",
     "published": "Published",
-    "user": "User",
-    "payment status": "Payment Status",
-    "transaction time": "Transaction Time",
+    "qeustion feedback": "qeustion feedback",
+    "qeustion feedbacks": "qeustion feedbacks",
+    "provided by": "provided by",
     "feedback": "Feedback",
     "provided on": "Provided On",
-    "general": "General",
     "difficulty level": "Difficulty Level",
-    "category": "Category",
     "difference": "Difference",
+    "hide question media": "hide question media",
+    "hide question media after (seconds)": "hide question media after (seconds)",
     "question text": "Question Text",
+    "question media type": "Question Media Type",
     "question media": "Question Media",
     "answer text": "Answer Text",
     "answer media": "Answer Media",
-    "id": "Id",
-    "import questions": "Import Questions",
-    "column mappings": "Column Mappings",
-    "Questions import has been queued": "Questions Import Has Been Queued",
-    "Import job ID: {$jobId}. You will receive an email notification when the import is complete.": "Import Job Id: {$Jobid}. You Will Receive An Email Notification When The Import Is Complete.",
-    "Failed to queue questions import": "Failed To Queue Questions Import",
-    "An error occurred while trying to queue the import job. Please try again or contact support.": "An Error Occurred While Trying To Queue The Import Job. Please Try Again Or Contact Support.",
-    "customers": "Customers",
-    "phone": "Phone",
-    "username": "Username",
+    "store": "store",
+    "created_at": "Created_At",
+    "order id": "order id",
+    "shipping": "shipping",
+    "status": "status",
+    "products": "products",
+    "suggested question": "suggested question",
+    "suggested questions": "suggested questions",
+    "suggested by": "suggested by",
+    "images": "images",
+    "users": "Users",
     "date of birth": "Date Of Birth",
-    "Gender": "Gender",
-    "Male": "Male",
-    "Female": "Female",
-    "country": "Country",
+    "gender": "gender",
+    "male": "male",
+    "female": "female",
     "kuwait": "Kuwait",
     "saudi arabia": "Saudi Arabia",
     "united arab emirates": "United Arab Emirates",
@@ -97,15 +138,18 @@
     "game credits": "Game Credits",
     "credits amount": "Credits Amount",
     "user games credit updated": "User Games Credit Updated",
-    "Game credits amount": "Game Credits Amount",
     "transaction id": "Transaction Id",
-    "amount": "Amount",
     "type": "Type",
     "deposit": "Deposit",
     "withdraw": "Withdraw",
-    "KD": "KD",
-    "Total Earnings": "Total Earnings",
-    "users": "Users",
+    "amount": "Amount",
+    "reason": "reason",
+    "kd": "kd",
+    "no data": "no data",
+    "total earnings": "total earnings",
+    "top user by purchase": "top user by purchase",
+    "total spent": "total spent",
+    "number of games played": "number of games played",
     "not authorized": "Not Authorized",
     "updated successfully": "Updated Successfully",
     "error, try again later": "Error, Try Again Later",
@@ -120,16 +164,48 @@
     "verification code has been resent": "Verification Code Has Been Resent",
     "google login successful": "Google Login Successful",
     "invalid category id": "Invalid Category Id",
-    "games": "Games",
+    "validation failed": "Validation Failed",
+    "invalid or expired coupon": "invalid or expired coupon",
+    "valid coupon": "valid coupon",
     "invalid game id": "Invalid Game Id",
-    "invalid package id": "Invalid Package Id",
+    "user orders": "user orders",
+    "invalid coupon.": "invalid coupon.",
+    "failed to create order. please try again.": "failed to create order. please try again.",
     "invalid request id": "Invalid Request Id",
+    "invalid order id": "invalid order id",
     "payment already processed": "Payment Already Processed",
     "paid successfully": "Paid Successfully",
     "payment failed": "Payment Failed",
+    "invalid package id": "Invalid Package Id",
     "page not found": "Page Not Found",
-    "validation failed": "Validation Failed",
     "feedback submitted successfully": "Feedback Submitted Successfully",
+    "categories retrieved successfully": "categories retrieved successfully",
+    "category retrieved successfully": "category retrieved successfully",
+    "user store orders": "user store orders",
+    "unauthorized": "unauthorized",
+    "order retrieved successfully": "order retrieved successfully",
+    "order created successfully": "order created successfully",
+    "failed to create order": "failed to create order",
+    "payment successful": "payment successful",
+    "products retrieved successfully": "products retrieved successfully",
+    "invalid product id": "invalid product id",
+    "product retrieved successfully": "product retrieved successfully",
+    "thank you for your suggestion": "thank you for your suggestion",
+    "suggestion updated successfully": "suggestion updated successfully",
+    "not found": "not found",
+    "suggesetion deleted successfully": "suggesetion deleted successfully",
+    "category deleted successfully": "category deleted successfully",
+    "question deleted successfully": "question deleted successfully",
+    "insufficient balance": "insufficient balance",
+    "you must select 4 to 6 categories": "you must select 4 to 6 categories",
+    "KD": "KD",
+    "import questions": "Import Questions",
+    "column mappings": "Column Mappings",
+    "updated_at": "Updated_At",
+    "customers": "Customers",
+    "max uses per user": "Max Uses Per User",
+    "leave empty for unlimited users": "Leave Empty For Unlimited Users",
+    "transaction time": "Transaction Time",
     "excel file (.xlsx)": "Excel File (.Xlsx)",
     "questions imported successfully": "Questions Imported Successfully",
     "is active": "Is Active",
@@ -143,10 +219,6 @@
     "question_media_url": "Question Media",
     "Answer Media": "Answer Media",
     "answer_media_url": "Answer Media",
-    "question media type": "Question Media Type",
-    "text": "Text",
-    "video": "Video",
-    "audio": "Audio",
     "answer media type": "Answer Media Type",
     "permenant category": "Permenant Category",
     "is temp": "Is Temp",
